--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@ai-sdk/openai": "^2.0.53",
     "@ai-sdk/openai-compatible": "^1.0.22",
     "@ai-sdk/react": "^2.0.78",
+    "@composio/core": "^0.2.0",
+    "@composio/vercel": "^0.2.12",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-dialog": "^1.1.15",
